# Legal-AI-Agent-Prototype

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  README_JA.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  vercel.json
backend/: Dockerfile  config.py  dependencies.py  main.py  start.py
backend/agent/: graph.py  nodes.py  state.py  tools.py
backend/data/: civil_law.txt  cost_samples_seed.json  egov_laws.json  eval_dataset.json  komoju_payment_methods.json  legal_knowledge.json  pricing_policy.json
backend/db/: migrate_startup.py  session.py  url.py
backend/eval/: evaluator.py
backend/mcp/: server.py
backend/models/: __init__.py  analysis_event.py  order.py  (+4 more)
docs/: OCR_MIGRATION_PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: check_locale_keys.sh  check_rag_eval.sh  fetch_egov_laws.py  run_backend_pytests.sh  smoke_local_flow.sh
tests/: test_analyze_risks.py  test_config_models.py  test_cost_analysis.py  test_cost_guard.py  test_costing.py  test_generate_report.py  test_google_vision_ocr.py  test_main.py  test_migrate_startup.py  test_order_cost_estimate.py  test_parse_contract.py  test_payment_service.py  test_pii_detector.py  test_rag_evaluator.py  test_review_persistence.py  test_router_analysis.py  test_router_eval.py  test_router_health.py  test_router_payment.py  test_router_referral.py  test_router_report.py  test_router_review.py  test_router_upload.py  test_router_upload_budget.py  test_security_hardening.py  test_temp_uploads.py  test_token_estimator.py
(+105 files in other folders)
